@@ -137,6 +137,26 @@ module Genarray = struct
     map_internal fd kind layout shared dims pos
 end
 
+module Array0 = struct
+  type ('a, 'b, 'c) t = ('a, 'b, 'c) Genarray.t
+  let create kind layout =
+    Genarray.create kind layout [||]
+  let get arr = Genarray.get arr [||]
+  let set arr = Genarray.set arr [||]
+  external kind: ('a, 'b, 'c) t -> ('a, 'b) kind = "caml_ba_kind"
+  external layout: ('a, 'b, 'c) t -> 'c layout = "caml_ba_layout"
+
+  let size_in_bytes arr = kind_size_in_bytes (kind arr)
+
+  external blit: ('a, 'b, 'c) t -> ('a, 'b, 'c) t -> unit = "caml_ba_blit"
+  external fill: ('a, 'b, 'c) t -> 'a -> unit = "caml_ba_fill"
+
+  let of_value kind layout v =
+    let a = create kind layout in
+    set a v;
+    a
+end
+
 module Array1 = struct
   type ('a, 'b, 'c) t = ('a, 'b, 'c) Genarray.t
   let create kind layout dim =
@@ -154,6 +174,10 @@ module Array1 = struct
     (kind_size_in_bytes (kind arr)) * (dim arr)
 
   external sub: ('a, 'b, 'c) t -> int -> int -> ('a, 'b, 'c) t = "caml_ba_sub"
+  let slice (type t) (a : (_, _, t) Genarray.t) n =
+    match layout a with
+    | C_layout -> (Genarray.slice_left a [|n|] : (_, _, t) Genarray.t)
+    | Fortran_layout -> (Genarray.slice_right a [|n|]: (_, _, t) Genarray.t)
   external blit: ('a, 'b, 'c) t -> ('a, 'b, 'c) t -> unit = "caml_ba_blit"
   external fill: ('a, 'b, 'c) t -> 'a -> unit = "caml_ba_fill"
   let of_array (type t) kind (layout: t layout) data =
@@ -277,12 +301,17 @@ module Array3 = struct
     Genarray.map_file fd ?pos kind layout shared [|dim1;dim2;dim3|]
 end
 
+external genarray_of_array0: ('a, 'b, 'c) Array0.t -> ('a, 'b, 'c) Genarray.t
+   = "%identity"
 external genarray_of_array1: ('a, 'b, 'c) Array1.t -> ('a, 'b, 'c) Genarray.t
    = "%identity"
 external genarray_of_array2: ('a, 'b, 'c) Array2.t -> ('a, 'b, 'c) Genarray.t
    = "%identity"
 external genarray_of_array3: ('a, 'b, 'c) Array3.t -> ('a, 'b, 'c) Genarray.t
    = "%identity"
+let array0_of_genarray a =
+  if Genarray.num_dims a = 0 then a
+  else invalid_arg "Bigarray.array0_of_genarray"
 let array1_of_genarray a =
   if Genarray.num_dims a = 1 then a
   else invalid_arg "Bigarray.array1_of_genarray"
@@ -296,6 +325,7 @@ let array3_of_genarray a =
 external reshape:
    ('a, 'b, 'c) Genarray.t -> int array -> ('a, 'b, 'c) Genarray.t
    = "caml_ba_reshape"
+let reshape_0 a = reshape a [||]
 let reshape_1 a dim1 = reshape a [|dim1|]
 let reshape_2 a dim1 dim2 = reshape a [|dim1;dim2|]
 let reshape_3 a dim1 dim2 dim3 = reshape a [|dim1;dim2;dim3|]
