@@ -19,6 +19,8 @@ sub
  1... 2... 3... 4... 5... 6... 7... 8... 9...
 blit, fill
  1... 2... 3... 4... 5... 6... 7... 8... 9... 10... 11... 12...
+slice
+ 1... 2... 3... 6... 7... 8...
 
 ------ Array2 --------
 
@@ -53,6 +55,10 @@ slice1
  1... 2... 3... 4... 5... 6... 7...
 size_in_bytes_general
  1...
+------ Array0 --------
+
+create/set/get
+ 1... 2... 3... 4... 5... 6... 7... 8... 9... 10... 11... 12...
 kind_size_in_bytes
  1... 2... 3... 4... 5... 6... 7... 8... 9... 10... 11... 12... 13...
 
@@ -62,6 +68,8 @@ reshape_1
  1... 2...
 reshape_2
  1... 2... 3... 4... 5... 6... 7...
+reshape
+ 8... 9... 10...
 
 ------ I/O --------
 
